--- a/index.html
+++ b/index.html
@@ -10,8 +10,70 @@
     <div class="box">
         <div class="search">
             <input type="text" placeholder="Seach for City ">
-            <button><img src="images/search.png" alt=""></button>
+            <button><img src="images/search.png" alt="">    </button>
+        </div>
+        <div class="weather">
+            <img src="images/clouds.png" alt="">
+            <h1 class="temp">17°C</h1>
+            <h2 class="city">Ahmedabad</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <img src="images/wind.png" alt="">
+                    <div>
+                        <p class="Wind">15KMPH</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
+<!-- <script src="index.js"></script> -->
+<script>
+
+
+const cityI = document.querySelector('.search input');
+
+const searchButton = document.querySelector('.search button');
+
+// let appKey = "bc2e77fe2cfe7a3baac19efb7ddb9487"
+// let apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${appKey}&units=metric`
+// console.log(apiUrl)
+
+console.log(searchButton)
+
+async function checkWeather(apiUrl){
+    const response = await fetch(apiUrl);
+    const data = await response.json();
+
+    console.log(data);
+
+    document.querySelector('.city').innerHTML = data.name
+    document.querySelector('.temp').innerHTML = data.main.temp + '°C'
+    document.querySelector('.humidity').innerHTML = data.main.humidity + "%"
+    document.querySelector('.Wind').innerHTML = data.wind.speed + 'KMPH' 
+
+
+}
+
+searchButton.addEventListener('click', ()=> {
+    const city = cityI.value
+    console.log(city)
+    let appKey = "bc2e77fe2cfe7a3baac19efb7ddb9487"
+    let apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${appKey}&units=metric`
+    checkWeather(apiUrl);
+} )
+
+
+
+</script>
 </body>
 </html>
