--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <!-- <script src="index.js"></script> -->
 <script>
 
+require('dotenv').config();
 
 const cityI = document.querySelector('.search input');
 
@@ -57,7 +58,7 @@ async function checkWeather(apiUrl){
     console.log(data);
 
     document.querySelector('.city').innerHTML = data.name
-    document.querySelector('.temp').innerHTML = data.main.temp + '°C'
+    document.querySelector('.temp').innerHTML = Math.round(data.main.temp) + '°C'
     document.querySelector('.humidity').innerHTML = data.main.humidity + "%"
     document.querySelector('.Wind').innerHTML = data.wind.speed + 'KMPH' 
 
@@ -67,7 +68,7 @@ async function checkWeather(apiUrl){
 searchButton.addEventListener('click', ()=> {
     const city = cityI.value
     console.log(city)
-    let appKey = "bc2e77fe2cfe7a3baac19efb7ddb9487"
+    const appKey = process.env.API_KEY;
     let apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${appKey}&units=metric`
     checkWeather(apiUrl);
 } )
